--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Native-JS</title>
 </head>
 <body>
-    <script src="./1.DataTypes/main.js"></script>
+    <script src="./2.ArrayMethods/main.js"></script>
 </body>
 </html>
